lab5/out
make[1]: Entering directory '/home/elijah/etc/programs/Compilers_CS104a/lab5'
g++ -std=gnu++17 -g -O0 -Wall -Wextra -Wpedantic -Wshadow -Wold-style-cast -fdiagnostics-color=never -c 3ac.cpp
3ac.cpp: In function ‘ac3* p_loop_condition(std::__cxx11::string*, astree*, ac3_table*)’:
3ac.cpp:847:11: error: ‘p_loop_conditon_relop’ was not declared in this scope
    return p_loop_conditon_relop(new string ("!="),goto_label,expr,current);
           ^~~~~~~~~~~~~~~~~~~~~
3ac.cpp:847:11: note: suggested alternative: ‘p_loop_condition_relop’
    return p_loop_conditon_relop(new string ("!="),goto_label,expr,current);
           ^~~~~~~~~~~~~~~~~~~~~
           p_loop_condition_relop
3ac.cpp: In function ‘ac3* p_if(astree*, ac3_table*, std::__cxx11::string*)’:
3ac.cpp:919:63: error: cannot convert ‘std::__cxx11::string {aka std::__cxx11::basic_string<char>}’ to ‘std::__cxx11::string* {aka std::__cxx11::basic_string<char>*}’ for argument ‘1’ to ‘ac3* p_loop_condition(std::__cxx11::string*, astree*, ac3_table*)’
    ac3 *parsed = p_loop_condition(goto_label,condition,current);
                                                               ^
Makefile:55: recipe for target '3ac.o' failed
make[1]: *** [3ac.o] Error 1
make[1]: Leaving directory '/home/elijah/etc/programs/Compilers_CS104a/lab5'
